# gerritbot-rs

./: .behaverc  .dockerignore  .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  Cargo.toml  HACKING.md  README.md  config-direct.yml  config-sqs.yml  docker-compose.yml  requirements.txt  rustfmt.toml  state.json
.github/workflows/: ci.yaml
etc/: gerritbot@.service
gerritbot/: Cargo.toml  build.rs
gerritbot-bot/src/: args.rs  lib.rs
gerritbot-gerrit/: Cargo.toml
gerritbot-gerrit/examples/: gerrit-events.rs  gerrit-extended-events.rs  gerrit-query-shell.rs  gerrit-query.rs
gerritbot-gerrit/src/: lib.rs
gerritbot-spark/: Cargo.toml
gerritbot-spark/examples/: echo-bot-sqs.rs  echo-bot.rs
gerritbot-spark/src/: lib.rs  sqs.rs
gerritbot/examples/: gerritbot-console.rs
gerritbot/src/: args.rs  command.rs  format.lua  format.rs  lib.rs  rate_limit.rs  state.rs  version.rs
gerritbot/src/state/: filter.rs  flags.rs  user.rs
gerritbot/tests/: test_command.rs
scripts/: format.lua
src/: args.rs  bot.rs  event.rs  gerrit.rs  lib.rs  main.rs  spark.rs  sqs.rs  utils.rs
testing/: Dockerfile.bot  Dockerfile.gerrit  bot.sh  config.yml  prepopulate.nohup  run-gerrit.sh  send-comment-to-gerrit.sh
tests/features/: closing_changes.feature  comment_responses.feature  comments.feature  enabling.feature  environment.py  flags.feature  formatting.feature  misc_commands.feature  reviewer_added.feature
tests/features/gerritbot_behave/: accounts.py  bot.py  format.py  gerrit.py  persons.py  ssh.py
tests/features/steps/: accounts.py  bot.py  gerrit.py  persons.py
