[package]
name = "gerritbot"
version = "0.4.0"
authors = ["boxdot <d@zerovolt.org>"]
license = "MIT/Apache-2.0"

[dependencies]
clap = "2.24"
futures = "0.1"
hlua = "0.4"
hyper = "0.10"
hyper-native-tls = "0.2"
iron = "0.6"
itertools = "0.7"
lazy_static = "0.2"
log = "0.3"
lru_time_cache = "0.7"
regex = "0.2"
router = "0.6"
rusoto_core = "0.29"
rusoto_sqs = "0.29"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
ssh2 = "0.3"
stderrlog = "0.2"
tokio-core = "0.1"
