[package]
name = "gerritbot"
version = "0.7.0"
authors = ["boxdot <d@zerovolt.org>"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
docopt = "1.0"
futures = "0.1"
hyper = "0.10"
hyper-native-tls = "0.2"
iron = "0.6"
itertools = "0.8"
lazy_static = "1.3"
log = "0.4"
lru_time_cache = "0.9"
notify-rust = "3"
regex = "1.1"
rlua = "0.16"
router = "0.6"
rusoto_core = "0.29"
rusoto_sqs = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
ssh2 = "0.3"
stderrlog = "0.4"
tokio-core = "0.1"
