[package]
name = "gerritbot-gerrit"
version = "0.7.0"
authors = ["boxdot <d@zerovolt.org>"]
license = "MIT/Apache-2.0"
edition = "2018"


[dependencies]
backoff = "0.1"
futures = "0.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ssh2 = "0.3"

[dev-dependencies]
spectral = { version = "0.6", default-features = false }
stderrlog = "0.4"
structopt = "0.2"
tokio = "0.1"