[package]
name = "gerritbot-spark"
version = "0.7.0"
authors = ["boxdot <d@zerovolt.org>"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
chrono = "0.4"
futures = "0.1"
http = "0.1"
hyper = "0.12"
log = "0.4"
reqwest = ">=0.9.12"
rusoto_core = "0.36"
rusoto_sqs = "0.36"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "0.1"

[dev-dependencies]
env_logger = "0.6"
structopt = "0.2"
toml = "0.4"
